# template-leptos-workspace

./: .gitignore  Cargo.toml  README.md  SURREALDB_DEFINITION  env.example  tailwind.config.js
app/: Cargo.toml
app/src/: lib.rs  tailwind.rs
app/src/error/: mod.rs
app/src/services/: db.rs  mod.rs
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
style/: main.scss
