[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
#
log = { workspace = true, optional = true }
#
surrealdb = { version = "1.5.2", optional = true }
once_cell = { version = "1.19.0", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
passwords = { version = "3.1.16", optional = true }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:surrealdb",
    "dep:once_cell",
    "dep:log",
    "dep:passwords",
]
